Update and rename Reyes_ePortfolio(1).htm to index.html

--- a/index.html
+++ b/index.html
@@ -2384,7 +2384,7 @@ clear=all style='mso-special-character:line-break;page-break-before:always'>
 accent1;padding:0in 0in 0in 0in;background:#549E39;mso-background-themecolor:
 accent1'>
 
-<h1>Introduction<span style='mso-tab-count:1'>       </span></h1>
+<h1>Introduction<span style='mso-tab-count:1'>Â Â Â Â Â Â  </span></h1>
 
 </div>
 
@@ -2400,7 +2400,7 @@ mso-background-themecolor:accent1;mso-background-themetint:51'>
 1-2 paragraphs. Include your previous degrees and certifications or internships
 if applicable.<o:p></o:p></i></p>
 
-<p class=MsoNormal><span style='mso-tab-count:1'>              </span>I began
+<p class=MsoNormal><span style='mso-tab-count:1'>Â Â Â Â Â Â Â Â Â Â Â Â Â  </span>I began
 my college career in 2015 when I was accepted to Texas Tech University in
 Lubbock, Texas. In 2019, I completed my Bachelor of Arts degree in Global
 Studies from Texas Tech University with a minor in Arabic. In 2025, I will
@@ -2428,7 +2428,7 @@ minor-latin;color:#333333;background:white'>Include at least 2 specific
 milestones you would like to achieve during your career journey.</span></i><i><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><o:p></o:p></span></i></p>
 
-<p class=MsoNormal><span style='mso-tab-count:1'>              </span>When I
+<p class=MsoNormal><span style='mso-tab-count:1'>Â Â Â Â Â Â Â Â Â Â Â Â Â  </span>When I
 graduate, I plan on working in an academic library in the state of Texas. I
 have always loved books, and the space that libraries have created for those
 who are book lovers. My career goals are to work for academic libraries and
@@ -2449,7 +2449,7 @@ feel I have utilized both of my degrees. </p>
 After graduating from the University of North Texas, I plan to work and gain
 experience working in Texas for some time as an academic librarian. Whether
 this is in a small community college, or a large and expansive private or state
-university, I plan to work towards providing services for students’ search for
+university, I plan to work towards providing services for studentsÂ’ search for
 information.</p>
 
 <i><span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif;
@@ -2466,8 +2466,8 @@ clear=all style='mso-special-character:line-break;page-break-before:always'>
 accent1;padding:0in 0in 0in 0in;background:#549E39;mso-background-themecolor:
 accent1'>
 
-<h1>LISTING OF COURSES TAKEN<span style='mso-tab-count:5'>                                                  </span><span
-style='mso-tab-count:4'>                                         </span></h1>
+<h1>LISTING OF COURSES TAKEN<span style='mso-tab-count:5'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span><span
+style='mso-tab-count:4'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span></h1>
 
 </div>
 
@@ -2681,7 +2681,7 @@ style='mso-tab-count:4'>                                         </span></h1>
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   mso-border-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt;height:14.5pt'>
-  <p class=MsoNormal style='margin:0in;line-height:normal'>Brian O’Conner, PhD.</p>
+  <p class=MsoNormal style='margin:0in;line-height:normal'>Brian OÂ’Conner, PhD.</p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:10;height:14.5pt'>
@@ -2838,7 +2838,7 @@ letter-spacing:.75pt'><o:p>&nbsp;</o:p></span></i></b></p>
 accent1;padding:0in 0in 0in 0in;background:#549E39;mso-background-themecolor:
 accent1'>
 
-<h1>Reflection on ALA’s Core Competences of Librarianship, 2023</h1>
+<h1>Reflection on ALAÂ’s Core Competences of Librarianship, 2023</h1>
 
 </div>
 
@@ -2850,19 +2850,19 @@ competencies of:<o:p></o:p></i></p>
 
 <p class=MsoListParagraphCxSpFirst style='text-indent:-.25in;mso-list:l0 level1 lfo6'><![if !supportLists]><span
 style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
-Symbol;mso-bidi-font-style:italic'><span style='mso-list:Ignore'>·<span
+Symbol;mso-bidi-font-style:italic'><span style='mso-list:Ignore'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><i>1.
 Gateway Knowledge<o:p></o:p></i></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo6'><![if !supportLists]><span
 style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
-Symbol;mso-bidi-font-style:italic'><span style='mso-list:Ignore'>·<span
+Symbol;mso-bidi-font-style:italic'><span style='mso-list:Ignore'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><i>5.
 Organization of Recorded Knowledge and Information<o:p></o:p></i></p>
 
 <p class=MsoListParagraphCxSpLast style='text-indent:-.25in;mso-list:l0 level1 lfo6'><![if !supportLists]><span
 style='font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:
-Symbol;mso-bidi-font-style:italic'><span style='mso-list:Ignore'>·<span
+Symbol;mso-bidi-font-style:italic'><span style='mso-list:Ignore'>Â·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span><![endif]><i>6.
 Reference and User Services<o:p></o:p></i></p>
 
@@ -2902,11 +2902,11 @@ historically supported their communities. My written communication skills have
 improved with the experience of writing graduate-level essays, presentations,
 and research papers, which I have completed every semester I have been enrolled
 in. While enrolled in INFO 5300 Management of Information Agency, I have
-learned how libraries protect their patrons’ privacy and the library in
+learned how libraries protect their patronsÂ’ privacy and the library in
 totality. During my practicum experience, I have learned and seen the impact of
 the preservation of historical documents, and the impact that it may have on
 the patrons that access that information, allowing me to bring the documents
-that are eligible for open access readily available – while also ensuring that
+that are eligible for open access readily available Â– while also ensuring that
 I took the steps necessary to avoid violating copyrights. I have learned about
 the importance a library plays in a local community, the importance of cultural
 competency to encourage frequent engagement, and the importance of closing the
@@ -2957,7 +2957,7 @@ pieces of this degree have given me the tools to gain the skills of
 organization of knowledge and information that I need to apply to my future
 career. These courses helped me become more well-rounded in acting in the
 library, but there is one that stands out that I believe truly solidified my
-abilities to work well in the library – and that is maintaining the system of
+abilities to work well in the library Â– and that is maintaining the system of
 metadata and indexing. These two skills have helped me work successfully during
 my practicum and in a real-world environment. </p>
 
@@ -2992,31 +2992,31 @@ many libraries, both real and imaginary. When many people think of a library or
 a librarian, they often think of the person who sits behind the front desk and
 helps them find the book that they need. Reference and understanding of user
 services are part of what it means to be a librarian, and my courses have given
-me this skill. Most notably, I gathered the skills from taking Dr. Vassilieva’s
-and Constance Coyle’s courses. Dr. Vassilieva’s course taught me how to handle
-several instances of patron interaction, while Ms. Coyle’s courses taught me
+me this skill. Most notably, I gathered the skills from taking Dr. VassilievaÂ’s
+and Constance CoyleÂ’s courses. Dr. VassilievaÂ’s course taught me how to handle
+several instances of patron interaction, while Ms. CoyleÂ’s courses taught me
 how to provide the documents that would be needed to provide those reference
-skills. Additionally, my course with Dr. O’Connor taught me more about the
+skills. Additionally, my course with Dr. OÂ’Connor taught me more about the
 method behind trying to anticipate what a user may need when they come in and
-ask for a document. &nbsp;I feel I’ve obtained this skill successfully because
+ask for a document. &nbsp;I feel IÂ’ve obtained this skill successfully because
 I can apply it in a real-world environment when family members and friends ask
 for help. I have helped those people find the documents they needed because
 they were interested in moving to a new country or trying to find a textbook
 for school without needing to purchase it. I have also encouraged the student
 workers I manage daily to use the university library when they need simple things
 like a printer, a fax, or a particular technology. This is one skill, I feel I
-have learned quickly, and I’ve been able to apply it to my life both in and out
+have learned quickly, and IÂ’ve been able to apply it to my life both in and out
 of the library. </p>
 
 <p class=MsoNormal style='text-indent:.5in'>The assignment that correlates with
 this core competency is the final project for Information Retrieval Design.
 This assignment was to create an annotated bibliography for a selected audience
 with six document sources. This audience was of my creation, and I chose a
-group of young adults attempting to find information on social media’s impact
+group of young adults attempting to find information on social mediaÂ’s impact
 on young millennials. The requirements included using the <i>Proceedings from
 the Document Academy</i>, where there are many documents, and careful
 consideration was required to include them in my bibliography. After selecting
-the articles that I believed would best fit my audience’s needs, I needed to
+the articles that I believed would best fit my audienceÂ’s needs, I needed to
 provide a summary, how it may fit the background of my audience, why it may be
 interesting to my audience, and credentials for each author. I believe this
 assignment in INFO 5206 is an excellent example of my proficiency in this
@@ -3062,13 +3062,13 @@ serves.</p>
 <p class=MsoNormal style='text-indent:.5in'>The assignment that correlates with
 this core competency is the gap assignment that I did for my information
 resource development course. I was given an imaginary budget and instructed to
-use several book-selling websites to “purchase” materials for my chosen
+use several book-selling websites to Â“purchaseÂ” materials for my chosen
 library. I had previously chosen the Texas Tech University library to write a
 profile earlier in the semester, so this is the library that I chose for this
 assignment. I was instructed to search the Texas Tech library and see if there
-were any “gaps” in the materials that were missing or had a sparse collection.
+were any Â“gapsÂ” in the materials that were missing or had a sparse collection.
 After my research, I found that the Texas Tech library had a sparse collection
-of language learning materials. So I used my imaginary “budget” to purchase
+of language learning materials. So I used my imaginary Â“budgetÂ” to purchase
 $2,000 worth of materials for language learning. I was instructed to create an
 Excel spreadsheet that showed the author, title of material, publisher,
 publication date, ISBN/ISSN, format, the source from which I selected, the
@@ -3100,11 +3100,11 @@ centers with a long and storied history of maintaining access to books and
 documents that many want pulled from shelves or censored and are more difficult
 to access. I have met this exact scenario in INFO 5300, where as a class, we
 had to decide at what point do we censor documents and books that may be
-considered “inappropriate” or “mature”. This allowed me to consider this
+considered Â“inappropriateÂ” or Â“matureÂ”. This allowed me to consider this
 real-world problem I can face in my future career. While there is no correct
 answer for this complicated situation, it was an excellent opportunity to
 consider what my actions would be in order to act in a way that is in
-accordance with the ALA’s core value, my personal ethics, and serving my
+accordance with the ALAÂ’s core value, my personal ethics, and serving my
 community to the best of my ability.</p>
 
 <p class=MsoNormal style='text-indent:.5in'>The Omeka project that I completed
@@ -3181,7 +3181,7 @@ of Arts in Global Studies</span><b><span style='font-size:13.5pt;font-family:
 0in;margin-left:0in;line-height:normal;mso-outline-level:1'><span
 style='font-family:"Lato",sans-serif;mso-fareast-font-family:"Times New Roman";
 mso-bidi-font-family:"Times New Roman";color:black;mso-font-kerning:18.0pt'><span
-style='mso-spacerun:yes'> </span>Dean’s List 2017, 2019 | President’s List 2018</span><b><span
+style='mso-spacerun:yes'>Â </span>DeanÂ’s List 2017, 2019 | PresidentÂ’s List 2018</span><b><span
 style='font-size:24.0pt;font-family:"Times New Roman",serif;mso-fareast-font-family:
 "Times New Roman";mso-font-kerning:18.0pt'><o:p></o:p></span></b></p>
 
@@ -3239,7 +3239,7 @@ mso-font-kerning:18.0pt'><o:p></o:p></span></b></p>
 mso-padding-alt:31.0pt 31.0pt 31.0pt 31.0pt;mso-border-shadow:yes'><span
 lang=EN style='font-size:9.0pt;font-family:"Lato",sans-serif;mso-fareast-font-family:
 Lato;mso-bidi-font-family:Lato;color:#666666;mso-ansi-language:EN'>January 2025
-– March 2025<o:p></o:p></span></p>
+Â– March 2025<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-top:0in;margin-right:-1.5pt;margin-bottom:
 0in;margin-left:0in;line-height:normal;mso-outline-level:3;border:none;
@@ -3250,7 +3250,7 @@ mso-bidi-font-family:"Playfair Display";color:black;mso-ansi-language:EN'>Texas
 Tech University Library, Lubbock, Texas</span></b><i style='mso-bidi-font-style:
 normal'><span lang=EN style='font-size:11.0pt;font-family:"Playfair Display";
 mso-fareast-font-family:"Playfair Display";mso-bidi-font-family:"Playfair Display";
-color:black;mso-ansi-language:EN'> – </span></i><span lang=EN style='font-size:
+color:black;mso-ansi-language:EN'> Â– </span></i><span lang=EN style='font-size:
 11.0pt;font-family:"Playfair Display";mso-fareast-font-family:"Playfair Display";
 mso-bidi-font-family:"Playfair Display";color:black;mso-ansi-language:EN'>Digital
 Scholarship Library Assistant </span><span lang=EN style='font-size:11.0pt;
