--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
-<link rel=File-List href="Reyes_ePortfolio(1)_files/filelist.xml">
-<link rel=Edit-Time-Data href="Reyes_ePortfolio(1)_files/editdata.mso">
+<link rel=File-List href="files/filelist.xml">
+<link rel=Edit-Time-Data href="files/editdata.mso">
+    <!-- Link to Materialize CSS (CDN) -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 <!--[if !mso]>
 <style>
 v\:* {behavior:url(#default#VML);}
